tests/machine/x/ocaml/len_string.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/len_string.ml", line 3, characters 2-15:
3 |   print_endline List.length "mochi"
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 3):
   1 | 
   2 | let () =
   3 |   print_endline List.length "mochi"
   4 | 
