tests/machine/x/ocaml/len_string.ml

let () =
  print_endline List.length "mochi"
